<resources>
    <string name="app_name">My Movies</string>
    <string name="poster_of_movie">Movie poster</string>
    <string name="text_popularity">Most Popular</string>
    <string name="text_top_rated">Top rated</string>
    <string name="label_title">Title:</string>
    <string name="label_original_title">Original title:</string>
    <string name="label_rating">Rating:</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_description">Description:</string>
    <string name="big_poster_movie">Big movie poster</string>
    <string name="add_to_favourite">Added to favorites</string>
    <string name="remove_from_favourite">Removed from favorites</string>
    <string name="item_main">Main Page</string>
    <string name="item_favourite">Favorite</string>
    <string name="start_trailer">Launch trailer</string>
    <string name="start_for_add_to_favourite">Star to add to favorites</string>
</resources>
